--- a/calculator/Makefile
+++ b/calculator/Makefile
@@ -21,7 +21,7 @@ BISON     = bison
 LINKER    = ${CC}
 CFLAGS    = -O2 -Wfatal-errors -Wall -std=gnu99 ${DEFINES} -fPIC
 CXXFLAGS  = -O2 -Wfatal-errors -Wall -std=c++11 ${DEFINES} -fPIC
-LIBS      = -lm -L/usr/lib/x86_64-linux-gnu -lfl
+LIBS      = -lm -L/usr/lib/x86_64-linux-gnu -lfl -lreadline
 INCLUDE   = -I./include
 MOVE      = mv -f
 
