1. update yacc build-in error token usage 2. build QA phony rule in Makefile

--- a/calculator/Makefile
+++ b/calculator/Makefile
@@ -110,5 +110,5 @@ cscope:
 
 qa:
 	cd $(UNIT_TEST_DIR);\
-	../bin/$(CALCULATOR_TARGET) < input1;
+	echo "`../bin/$(CALCULATOR_TARGET) < input1`" > ../output;
 
